# potato-wars

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conventions.md
include/: ActionCamera.h  Ball.h  Bomb.h  BombHandler.h  Button.h  ButtonsGroup.h  CMakeLists.txt  Camera.h  Const.h  CrateDropper.h  Explosion.h  Game.h  GameHelperData.h  GameMap.h  MainScreen.h  Map.h  MapVector.h  MovingMapObject.h  ParallaxLayer.h  Physics.h  PlayerColor.h  SoundPlayer.h  Team.h  TeamCamera.h  ball.h  bomb.h  bomb_handler.h  camera.h  circ_object_texture.h  level.h  map.h  map_vector.h  moving_map_object.h  object.h  playerTexture.h  player_texture.h  resources_manager.h  texture_manager.h
include/Button/: Button.h  ButtonsGroup.h  ColorButton.h  TextureButton.h  ToggleButton.h
include/MapObject/: Ball.h  Bomb.h  BombObject.h  Character.h  Crate.h  Fragments.h  Grenade.h  Missile.h  MovingMapObject.h  Projectile.h  Rock.h
include/Screen/: EndGameScreen.h  ErrorScreen.h  GameScreen.h  HelpScreen.h  MainScreen.h  Screen.h  (+2 more)
src/: ActionCamera.cpp  Ball.cpp  BombHandler.cpp  Button.cpp  ButtonsGroup.cpp  CMakeLists.txt  Camera.cpp  ColorButton.cpp  CrateDropper.cpp  Game.cpp  GameHelperData.cpp  GameMap.cpp  GameScreen.cpp  MainScreen.cpp  Map.cpp  MapVector.cpp  MovingMapObject.cpp  ParallaxLayer.cpp  ParallaxLayer.cpp~  Physics.cpp  ScreenManager.cpp  SoundPlayer.cpp  Team.cpp  TeamCamera.cpp  ball.cpp  bomb_handler.cpp  camera.cpp  main.cpp  map.cpp  map_vector.cpp  moving_map_object.cpp  playerTexture.cpp  player_texture.cpp  resources_manager.cpp  texture_manager.cpp
(+89 files in other folders)
